--- a/Générateur PU.html
+++ b/Générateur PU.html
@@ -125,7 +125,7 @@
             <button class="category-image-button" onclick="selectOptionalOption('/R', 'PAR', 8)">
 				<img src="images/PAR.jpg" alt="PAR">PAR</button>
             <button class="category-image-button" onclick="selectOptionalOption('/D', 'PAZ + PAR', 8)">
-				<img src="images/PAZ-PAR.jpg" alt="PAZ + PAR">PAZ + PAR</button>
+				<img src="images/PAD.jpg" alt="PAZ + PAR">PAZ + PAR</button>
         </div>
 		<h4>Antistatique</h4>
 		<div class="category-buttons">
@@ -134,7 +134,7 @@
             <button class="category-image-button" onclick="selectOptionalOption('/RS', 'PARAS', 8)">
 				<img src="images/PARAS.jpg" alt="PAR Antistatique">PAR Antistatique</button>
             <button class="category-image-button" onclick="selectOptionalOption('/DS', 'PAZAS + PARAS', 8)">
-				<img src="images/PAZAS-PARAS.jpg" alt="PAZ + PAR Antistatique">PAZ + PAR Antistatique</button>
+				<img src="images/PADAS.jpg" alt="PAZ + PAR Antistatique">PAZ + PAR Antistatique</button>
         </div>
     </div>
 
