--- a/Générateur PU.html
+++ b/Générateur PU.html
@@ -120,8 +120,8 @@
     <!-- Étape 7: Tissu -->
     <div class="step" id="step7">
         <button class="back-button" onclick="goBack(5)">Retour</button>
-        <h3>Besoin d'un revêtement coextrudé ?</h3>
-        <div class="step-description" id="step7-description">Ces revêtements viennent avec le rouleau, ils peuvent être une option économique et rapide</div>
+        <h3>Besoin d'un revêtement en tissu ?</h3>
+        <div class="step-description" id="step7-description"></div>
 		<button onclick="selectOptionalOption('', 'Sans')" style="width: 200px;">Sans</button>
 		<h4>Standard</h4>
         <div class="category-buttons">
@@ -140,24 +140,6 @@
 				<img src="images/PARAS.jpg" alt="PAR Antistatique">Dos</button>
             <button class="category-image-button" onclick="selectOptionalOption('/DS', 'PAZAS + PARAS', 8)">
 				<img src="images/PADAS.jpg" alt="PAZ + PAR Antistatique">Dents et dos</button>
-        </div>
-		<h4>Surchouche PU</h4>
-		<div class="category-buttons">
-            <button class="category-image-button" onclick="selectOptionalOption('/2', 'PUR85 de 2mm', 8)">
-				<img src="images/PUR85.jpg" alt="PAZ Antistatique">2mm</button>
-            <button class="category-image-button" onclick="selectOptionalOption('/3', 'PUR85 de 3mm', 8)">
-				<img src="images/PUR85.jpg" alt="PAZ + PAR Antistatique">3mm</button>
-        </div>
-        <h4>Technogum</h4>
-		<div class="category-buttons">
-            <button class="category-image-button" onclick="selectOptionalOption('/2TG50', 'Technogum 50 de 2mm', 8)">
-				<img src="images/TG50.jpg" alt="PAZ Antistatique">50Sh 2mm</button>
-            <button class="category-image-button" onclick="selectOptionalOption('/3TG50', 'Technogum 50 de 3mm', 8)">
-				<img src="images/TG50.jpg" alt="PAR Antistatique">50Sh 3mm</button>
-            <button class="category-image-button" onclick="selectOptionalOption('/2TG70', 'Technogum 70 de 2mm', 8)">
-				<img src="images/TG70.jpg" alt="PAR Antistatique">70Sh 2mm</button>
-            <button class="category-image-button" onclick="selectOptionalOption('/3TG70', 'Technogum 70 de 3mm', 8)">
-				<img src="images/TG70.jpg" alt="PAZ + PAR Antistatique">70Sh 3mm</button>
         </div>
     </div>
 
